# skald

./: .gitignore  Cargo.toml  LICENSE-MIT
examples/: artist.sql  deadpool.rs  example.rs  r2d2.rs  sqlx.rs
src/: lib.rs
src/embedded_milli/: mod.rs
src/pool/: deadpool.rs  mod.rs  r2d2.rs  r2d2_adapter.rs  sqlx.rs
