[package]
name = "skald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossbeam = "0.8"
dashmap = "5"
derivative = "2"
milli = { git = "https://github.com/meilisearch/meilisearch", rev = "v1.3.0-rc.3", version = "1.3.0" }
once_cell = "1"
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_sqlite = { path = "../r2d2-sqlite" }
rusqlite = { path = "../rusqlite", features = [
    "hooks",
    "preupdate_hook",
    "bundled",
    "serde_json",
] }
serde_json = "1"

[dev-dependencies]
slite = { path = "../slite", default-features = false, features = [
    "read-files",
] }
