[package]
name = "skald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
crossbeam = "0.8"
dashmap = "5"
deadpool = { path = "../deadpool", optional = true }
deadpool-sqlite = { path = "../deadpool/sqlite", optional = true }
deadpool-sync = { path = "../deadpool/sync", optional = true }
derivative = "2"
milli = { git = "https://github.com/meilisearch/meilisearch", rev = "v1.3.0-rc.3", version = "1.3.0" }
once_cell = "1"
parking_lot = "0.12"
r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { path = "../r2d2-sqlite", optional = true }
rusqlite = { path = "../rusqlite", features = [
    "hooks",
    "preupdate_hook",
    "bundled",
    "serde_json",
] }
sqlx = { path = "../sqlx", features = ["sqlite"], optional = true }
serde_json = "1"
futures-core = "0.3"

[dev-dependencies]
slite = { path = "../slite", default-features = false, features = [
    "read-files",
] }
sqlx = { path = "../sqlx", features = ["sqlite", "json", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

[features]
r2d2 = ["dep:r2d2", "r2d2_sqlite"]
deadpool = ["dep:deadpool", "deadpool-sqlite", "deadpool-sync"]
sqlx = ["dep:sqlx"]
default = ["r2d2", "deadpool", "sqlx"]
